Dark mode fixes
- Modal footer background color adjustment
- Usage key text color fix
- Set buttons to btn-secondary

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h4.usage-key { color: black!important;  margin-top: 10px; }
 #setStateMenu .db-buttons a { width: 100%; }
 
 /* Dark mode light mode toggle from https://codepen.io/fydsa/pen/abwdpep */
-:root { --light: #d8dbe0; --dark: #39393f; --darksecondary: #4f4f4f; }
+:root { --light: #d8dbe0; --dark: #39393f; --darksecondary: #303030; }
 .toggle-switch { position: fixed; width: 50px; display: flex; align-items: center; right: 4.5em; }
 .toggle-switch label { position: absolute; width: 100%; height: 25px; background-color: var(--dark); border-color: var(--light); border-radius: 12px; cursor: pointer; }
 .toggle-switch input { position: absolute; display: none; }
@@ -144,6 +144,7 @@ table.evo-table input { height: 16px; width: 16px; margin-left: -2.5rem!importan
 
 .dark-mode .card.dex-box, .dark-mode .card.dex-entry { background-color: var(--dark); }
 .dark-mode .card.dex-entry.caught h4 { color: lightgray!important; }
+.dark-mode .dex-entry h4 { color: lightgray!important; }
 .dark-mode .card.dex-entry img { opacity: 0.2; }
 .dark-mode .card.dex-entry.caught img { opacity: 1; }
 
